--- a/index.html
+++ b/index.html
@@ -100,6 +100,21 @@
 			<div class="calendar" id="calendar"></div>
 		</script>
 		
+		<!-- Reservation View Template -->
+		<script id="reservation-display-template" type="type/x-handlebars-template">
+			<div class="row">
+				{{#each sections}}
+					<div class="col-sm-6">
+						{{#each fields}}
+							<div class="reservation-field-info-container">
+								<p><b>{{label}}</b> : {{value}}</p>
+							</div>
+						{{/each}}
+					</div>
+				{{/each}}
+			</div>
+		</script>
+		
 	</head>
 	<body>
 		<!-- All content is dynamically generated and put in here -->
