--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 		<script id="credit-card-info-template" type="text/x-handlebars-template">
 			<div class="col-sm-4">
 				<h2>Credit Card Payment</h2>
+				<p class="transaction error-info"></p>
 				{{#each fields}}
 					<div class="form-group" id="{{id}}-container">
 						<label>{{label}}</label>
