Minor UI changes

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 				<header class="sub-header">
 					<div class="row">
 						<div class="col-md-12">
-							<h3>Payment</h3>
+							<h3>Credit Card Information</h3>
 						</div>
 					</div>
 				</header>
@@ -117,7 +117,7 @@
 				
 				<div class="col-md-12">
 					<center>
-						<button id="btn-submit" type="button" class="btn btn-primary btn-lg">Submit Reservation / Make Payment</button>
+						<button id="btn-submit" type="button" class="myButton">Submit Reservation / Make Payment</button>
 					</center>
 				</div>
 				
