--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@
 			</div>
 		</script>
 		
+		<!-- CLNDR.js related template -->
 		<script id="week-template" type="type/x-handlebars-template">
 			<div class="days">
 				{{#each days}}
@@ -176,6 +177,7 @@
 			</div>
 		</script>
 		
+		<!-- CLNDR.js related template -->
 		<script id="clndr-template" type="type/x-handlebars-template">
 			<section>
 				<div class="clndr-ctrls">
