--- a/index.html
+++ b/index.html
@@ -183,9 +183,23 @@
 		<script id="clndr-template" type="type/x-handlebars-template">
 			<section id="calendar-section">
 				<div class="clndr-ctrls">
-					<div class="clndr-ctrl"><i class="glyphicon glyphicon-chevron-left clndr-previous-button"></i></div>
-					<div class="clndr-ctrl month-year col-sm-8">{{month}} - {{year}}</div>
-					<div class="clndr-ctrl"><i class="glyphicon glyphicon-chevron-right clndr-next-button col-sm-2"></i></div>
+					<div class="clndr-ctrl clndr-ctrl-nav">
+						<button type="button" class="btn btn-default clndr-previous-button btn-lg">
+							<span class="glyphicon glyphicon-circle-arrow-left"></span>
+						</button>
+					</div>
+					<div class="clndr-ctrl month-year">
+						<h3><b>{{month}} - {{year}}</b></h3>
+						<button type="button" class="btn btn-default btn-lg clndr-today-button" id="today-button">
+							<b>Today</b>
+						</button>
+					</div>
+					
+					<div class="clndr-ctrl clndr-ctrl-nav">
+						<button type="button" class="btn btn-default clndr-next-button btn-lg">
+							<span class="glyphicon glyphicon-circle-arrow-right"></span>
+						</button>
+					</div>
 				</div>
 				<div class="days weekdays">
 					{{#each daysOfTheWeek}}
