removing req fields, extra error information

--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
 				
 				<div class="col-md-12">
 					<center>
+						<h3 id="error-indication">Please fix the errors marked in red in order to make a reservation.</h3>
 						<button id="btn-submit" type="button" class="myButton">Submit Reservation / Make Payment</button>
 					</center>
 				</div>
