pre-payment fix

--- a/index.html
+++ b/index.html
@@ -305,7 +305,7 @@
 					<p><b>Pickup Zip:</b> {{pickup_zip}}</p>
 					<p><b>Pickup Date:</b> {{pickup_date}}</p>
 					<p><b>Pickup Time:</b> {{pickup_time}}</p>
-					<p><b>Status:</b> {{status}}</p>
+					<p><b>Status:</b> <b class="{{status}}-text">{{status}}</b></p>
 					<p><b>Total Price:</b> {{total_price}}</p>
 					<p><b>Special Instructions:</b> {{special_instructions}}</p>
 				</div>
